Fix spacing

--- a/style.css
+++ b/style.css
@@ -72,6 +72,7 @@ header p {
 .issue {
     width: 48%;
     float: left;
+    margin-bottom: 20px;
 }
 
 .issue img {
